FIX: on mobile view, never show the show/hide preview link in composer. nexus 7 was showing it.

--- a/app/assets/stylesheets/common/base/mobile.scss
+++ b/app/assets/stylesheets/common/base/mobile.scss
@@ -2,7 +2,6 @@
 and (min-device-width : 320px)
 and (max-device-width : 540px) {
   #reply-control {
-    .toggle-preview { display:none; }
     #reply-title { width: 250px; }
     .wmd-controls {
       #wmd-input {
