--- a/app/assets/stylesheets/mobile/compose.scss
+++ b/app/assets/stylesheets/mobile/compose.scss
@@ -22,14 +22,15 @@ display: none;
     right: 5px;
     margin-top: 0;
   }
-  .toggle-preview, .mobile-file-upload {
+  .toggle-preview { display:none; }
+  .mobile-file-upload {
     text-decoration: underline;
   }
-  .toggle-preview, #draft-status, #file-uploading, .mobile-file-upload {
+  #draft-status, #file-uploading, .mobile-file-upload {
     float: right;
     margin-right: 8px;
   }
-  .toggle-preview, .mobile-file-upload {
+  .mobile-file-upload {
     text-decoration: underline;
   }
   #file-uploading {
